week4/manifests/day5/ingress-host-based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: www.bootcamp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-main-service
            port:
              number: 80

  - host: api.bootcamp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80

  - host: admin.bootcamp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port:
              number: 80
